# xserial

./: CMakeLists.txt
example/com_port/: main.cpp
src/: helpers.cpp  xserial.cpp  xserial.hpp
